[package]
name = "hyperware-app-framework"
version = "0.1.0"
edition = "2021"
authors = ["Sybil Technologies AG"]

[dependencies]
anyhow = "1.0"
hyperware_process_lib = { git = "https://github.com/hyperware-ai/process_lib.git", rev = "40d3daf", features = [] }
process_macros = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.36.0"

[features]
simulation-mode = ["hyperware_process_lib/simulation-mode"]
