[package]
name = "hyperware-app-framework"
version = "0.1.0"
edition = "2021"
authors = ["Sybil Technologies AG"]

[dependencies]
anyhow = "1.0"
hyperware_process_lib = { version = "1.2.0", features = [] }
process_macros = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.36.0"

[features]
simulation-mode = ["hyperware_process_lib/simulation-mode"]
